--- a/deployment.yaml
+++ b/deployment.yaml
@@ -33,7 +33,7 @@ spec:
       volumes:
         - name: index-html
           configMap:
-            name: index-html
+            name: index_html
             items:
               - key: index-html
                 path: index.html
