--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-metadata:
-  namespace: nginx
+# metadata:
+#   namespace: nginx
 
 resources:
   - deployment.yaml
