--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx
-  namespace: nginx
+  namespace: temptest
   labels:
     app: nginx
 spec:
@@ -20,6 +20,9 @@ spec:
           image: nginx
           ports:
           - containerPort: 80
+          - name: metrics
+            containerPort: 9113
+            protocol: TCP
           volumeMounts:
             - name: index-html
               mountPath: "/usr/share/nginx/html"
