--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ngnix-service
-  namespace: nginx
+  namespace: temptest
 spec:
   selector:
     app: nginx-service
