--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -1,7 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-# metadata:
-#   namespace: nginx
+metadata:
+  namespace: nginx
+  labels:
+    team: app
 
 resources:
   - deployment.yaml
@@ -15,3 +17,6 @@ configMapGenerator:
   - name: index-html
     files:
       - index-html
+  - name: default-conf
+    files:
+      - nginx
