--- a/kustomize/service.yaml
+++ b/kustomize/service.yaml
@@ -1,13 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ngnix-service
-  namespace: nginx
+  name: nginx
+  namespace: temptest
+  labels:
+    app: nginx
+    task-group: service
 spec:
   selector:
-    app: nginx-service
+    app: nginx
   type: NodePort
   ports:
   - protocol: TCP
+    name: http
     port: 80
-    targetPort: 80
+  - name: metrics
+    port: 9113
+    protocol: TCP
