--- a/kustomize/kustomization.yaml
+++ b/kustomize/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 metadata:
-  namespace: nginx
+  namespace: temptest
   labels:
     team: app
 
