--- a/kustomize/servicemonitor.yaml
+++ b/kustomize/servicemonitor.yaml
@@ -26,18 +26,16 @@ spec:
       action: replace
       targetLabel: task_group
       regex: ^(.*)$
-      replacement: monitoring
+      replacement: fromservicemonitor
     - sourceLabels: [__meta_kubernetes_deployment_label_task_group]
       separator: ;
       action: replace
       targetLabel: task_group
       regex: ^(.*)$
-      replacement: monitoring
+      replacement: fromservicemonitor
     - sourceLabels: [__meta_kubernetes_pod_label_task_group]
       separator: ;
       action: replace
       targetLabel: task_group
       regex: ^(.*)$
-      replacement: monitoring
-
-
+      replacement: fromservicemonitor
